<resources>
    <string name="app_name">OpenCT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">设置</string>
    <string name="pref_header_school">校园信息</string>
    <string name="pref_title_remember_me">保存账户信息</string>
    <string name="pref_description_remember_me">您的账户密码均保存在本地</string>

    <string name="school">学校</string>

    <string name="pref_title_current_week">本周</string>
    <string-array name="pref_week_seq_titles">
        <item>第1周</item>
        <item>第2周</item>
        <item>第3周</item>
        <item>第4周</item>
        <item>第5周</item>
        <item>第6周</item>
        <item>第7周</item>
        <item>第8周</item>
        <item>第9周</item>
        <item>第10周</item>
        <item>第11周</item>
        <item>第12周</item>
        <item>第13周</item>
        <item>第14周</item>
        <item>第15周</item>
        <item>第16周</item>
        <item>第17周</item>
        <item>第18周</item>
        <item>第19周</item>
        <item>第20周</item>
        <item>第21周</item>
        <item>第22周</item>
        <item>第23周</item>
        <item>第24周</item>
        <item>第25周</item>
        <item>第26周</item>
        <item>第27周</item>
        <item>第28周</item>
        <item>第29周</item>
        <item>第30周</item>
    </string-array>
    <string-array name="pref_week_seq_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <string-array name="njit_room_places">
        <item>东馆</item>
        <item>东馆A座</item>
        <item>东馆B座</item>
        <item>东馆C座</item>
        <item>西馆</item>
        <item>西馆A座</item>
        <item>西馆B座</item>
        <item>西馆C座</item>
        <item>南馆</item>
        <item>南馆A座</item>
        <item>南馆B座</item>
    </string-array>

    <string-array name="week_days">
        <item>整周</item>
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
        <item>@string/sunday</item>
    </string-array>

    <string-array name="njit_class_times">
        <item>全天</item>
        <item>上午</item>
        <item>1 – 2节</item>
        <item>3 – 4节</item>
        <item>下午</item>
        <item>5 – 6节</item>
        <item>7 – 8节</item>
    </string-array>

    <string name="captcha_fail">加载验证码失败, 再试一次看看</string>
    <string name="login_fail">登录失败, 请检查您的用户名密码\n(以及验证码)</string>
    <string name="network_error">网络连接失败\n是否打开了WiFi或数据流量?</string>
    <string name="netowrk_timeout">校园服务器状态不佳\n请稍后重试</string>
    <string name="unknown_error">/(ㄒoㄒ)/~~发生了未知错误\n程序员正在加班修复</string>

    <string name="pref_header_about">关于</string>
    <string name="pref_about_openct">关于OpenCT</string>
    <string name="pref_about_author">关于作者</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_header_open_source_license">开源信息</string>
    <string name="class_table">课程表</string>
    <string name="grade_list">成绩查询</string>
    <string name="search_lib">馆藏查询</string>
    <string name="borrow_info">借阅信息</string>
    <string name="settings">设置</string>

    <string name="pref_default_school_name">njit</string>

    <string name="pref_licience_info">
        \nCopyright OpenCT-MVP METAPRO.CC\n
        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at\n
        http://www.apache.org/licenses/LICENSE-2.0\n\n
        (Click to View Web Version LICENSE)\n
    </string>
    <string name="search">检索</string>
    <string name="press_to_get_captcha">点击获取验证码</string>
    <string name="enter_code">输入验证码</string>
    <string name="grade_query">成绩查询</string>
    <string name="clear">清空</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="friday">周五</string>
    <string name="nav_header_img">nav_header_img</string>
    <string name="school_app">校园应用</string>
    <string name="upadte_classes">更新课表</string>
    <string name="show_all_borrows">所有借阅</string>
    <string name="show_exceeded">已超期</string>
    <string name="app_description">开源课程表应用</string>
    <string name="show_raw">查看馆藏详情</string>
    <string name="password_notice">用户名密码都将保存在本地</string>
    <string name="notice">注意</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="library">图书馆</string>
    <string name="basic_info">基本信息</string>
    <string name="user_info">用户信息</string>
    <string name="jwxt">教务系统</string>
    <string name="pref_lib_summary">你的图书管理系统用户名及密码</string>
    <string name="pref_cms_summary">你的教务网用户名及密码</string>
    <string name="cet_query">四六级查询</string>
    <string name="cet_num">准考证号</string>
    <string name="cet_name">姓名</string>
    <string name="loading_class_infos">正在加载课程表</string>
    <string name="loading_grade_infos">正在加载成绩</string>
    <string name="loading_borrow_info">正在加载借阅信息</string>
    <string name="need_captcha">请输入验证码</string>
    <string name="loading_cet_grade">正在加载CET成绩</string>
    <string name="filter">筛选</string>
    <string name="show_all_avail_time">查看所有空闲时间</string>
    <string name="empty_room_query">查空教室</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="enrich_cms_info">请先完善您的教务网个人信息</string>
    <string name="enrich_lib_info">请先完善您的图书馆个人信息</string>
    <string name="load_cet_grade_fail">获取 CET 成绩失败惹, 要不一会儿再试试?</string>
    <string name="no_grades_to_show">没有成绩可以显示</string>
    <string name="no_grades_avail"><![CDATA[没能从教务网获取到成绩 %>_<%]]></string>
    <string name="no_classes_avail"><![CDATA[没能从教务网获取到课表 %>_<%]]></string>
    <string name="no_borrows_avail"><![CDATA[没能从图书馆获取到借阅信息 %>_<%]]></string>
    <string name="no_local_classes_avail">这里还没有课表哦\n(点击右上角获取教务网课表)</string>
    <string name="no_local_grades_avail">这里还没有成绩哦\n(点击右下角获取教务网最新成绩)</string>
    <string name="no_local_borrows_avail">这里还没有借阅信息哦\n(点击右下角获取图书馆借阅信息)</string>
    <string name="somthing_wrong">出现了点问题~\n</string>
    <string name="daily_classes">今日课表</string>
    <string name="weekly_classes">本周课表</string>
    <string name="sem_classes">学期课表</string>
    <string name="no_daily_classes">今天没有课\n好好休息一下吧~</string>
    <string name="creating_class_ical">正在创建课程日历文件</string>
    <string name="export_to_ical">导出到iCal</string>
</resources>
