<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/class_table"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/refresh_classes"
                android:title="@string/update_classes"
                app:showAsAction="ifRoom|withText|collapseActionView"
                />
            <item
                android:id="@+id/export_classes"
                android:title="@string/export_to_ical"
                app:showAsAction="ifRoom|withText|collapseActionView"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
