<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <android.support.v7.widget.AppCompatTextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_weight="2"
            android:text="@string/monday"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_weight="2"
            android:text="@string/tuesday"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_weight="2"
            android:text="@string/wednesday"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_weight="2"
            android:text="@string/thursday"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_weight="2"
            android:text="@string/friday"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_weight="2"
            android:text="@string/saturday"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_weight="2"
            android:text="@string/sunday"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/sem_class_seq"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/sem_class_content"
                android:layout_weight="14"
                android:layout_width="0dp"
                android:layout_height="match_parent">
            </RelativeLayout>

        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>

</LinearLayout>